# hex_system

./: .editorconfig  .gitattributes  .gitignore  README.rst  pyproject.toml  setup.cfg
gui/: __init__.py  gui.py
hex_system/: __init__.py  config.py  coordinates.py  hex_grid.py  loggers.py  main.py  tile_grid.py  utils.py
hex_system/geometry/: __init__.py  hexagon.py  line.py  point.py  rectangle.py
hex_system/grid/: __init__.py  cube.py  hex_cell.py  offset.py
hex_system/gui/: __init__.py  gui.py
tests/: conftest.py
tests/geometry/: __init__.py  test_line.py  test_point.py
