[metadata]
name = Hex System
version = attr: hex_system.__version__
url = https://github.com/
author = Tesla Crashed
maintainer = Tesla Crashed
description = .
license = From Dyvers Hands
license_files = LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = hex, geometry, grid, tile
platforms = any
classifiers =
	Development Status :: 4 - Beta
	Natural Language :: English
	Operating System :: OS Independent
	Operating System :: POSIX
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
package_dir =
	=hex_system
packages = find:
include_package_data = True
python_requires = >= 3.7
install_requires =
	pytest >= 7.1.0
setup_requires =
	wheel >= 0.37.0

[options.packages.find]
where = hex_system
exclude =
	.git
	.idea
	.pytest_cache
	.venv
	__pycache__
	build
	dist
	logs
	scripts
	tests
	wheelhouse

[egg_info]
egg_base = ./dist
tag_build =
tag_date = 0

[sdist]
dist_dir = ./dist
formats = gztar

[build]
build_base = ./build
build_lib = ./build/lib

[bdist_wheel]
bdist_dir = ./dist
dist_dir = ./wheelhouse
# {python tag}-{abi tag}-{platform tag}
plat_name = any
python_tag = py3
universal = 0
